--- a/templates/groupe_items.html
+++ b/templates/groupe_items.html
@@ -246,6 +246,9 @@
                 <span class="star" data-value="4">★</span>
                 <span class="star" data-value="5">★</span>
             </div>
+            <div style="margin-top: 15px;">
+                <a href="{{ url_for('view_ratings') }}" class="button">Voir toutes les notes</a>
+            </div>
         </div>
     </div>
 
